--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ disqusShortname = ""
     # To change the background image on the homepage banner, replace 'banner.jpg' in
     # the 'static/img' folder.
     title = "The DevOps Toolkit Series"
-    subtitle = "Alboroto Rules!!!"
+    subtitle = "Alboroto Rules 1!!!"
     buttonText = "Get Started"
 
 
