--- a/kustomize/overlays/production/istio.yaml
+++ b/kustomize/overlays/production/istio.yaml
@@ -9,7 +9,7 @@ spec:
   - argo-combined-app
   hosts:
   - argo-combined-app.local
-  - argo-combined-app.192.168.1.227.xip.io
+  - argo-combined-app.192.168.1.227
   http:
   - name: primary
     route:
