--- a/kustomize/overlays/production/rollout.yaml
+++ b/kustomize/overlays/production/rollout.yaml
@@ -47,7 +47,7 @@ spec:
       stableService: argo-combined-app
       trafficRouting:
         # istio:
-        traefik:
+        nginx:
           stableIngress:
             name: argo-combined-app-ingress
           # virtualService:
