--- a/kustomize/overlays/staging/ingress.yaml
+++ b/kustomize/overlays/staging/ingress.yaml
@@ -1,19 +1,15 @@
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: argo-combined-app
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
-    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-http@kubernetescrd
+    kubernetes.io/ingress.class: traefik
+  name: argo-combined-app-staging-ingress
 spec:
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix #ImplementationSpecific
-        backend:
-          service:
-            name: argo-combined-app
-            port: 
-              number: 80
+      - backend:
+          serviceName: argo-combined-app
+          servicePort: 80
+        path: /
     host: staging.argo-combined-app.example.com
